style.css
/* ... */
.contact-form input {
  height: 20px;
  vertical-align: 0px;
}

.contact-form textarea {
  vertical-align: -48px;
}

form button {
  padding: 11px 27px;
  border-radius: 8px;
  font-weight: bold;
  font-size: 23px;
  font-family: 'Ubuntu Condensed', Arial, Helvetica, sans-serif;
  background-color: white;
  border: 3px rgb(189, 50, 207) solid;
  color: rgb(189, 50, 207);
  cursor: pointer;
  margin-bottom: 1px;
  transition: transform 0.4s;
}

form button:active {
  transform: scale(0.9);
}

form button:hover {
  border: 3px rgb(50, 113, 207) solid;
  color: rgb(50, 113, 207);
  transform: scale(0.9);
}

.button-wrapper {
  text-align: center;
}

footer {
  padding: 1px;
  background-color: rgb(241, 241, 241);
  margin-top: 80px;
  text-align: center;
  color: rgb(50, 113, 207);
  font-weight: bold;
  font-size: 14px;
}

footer a {
  color: black;
}

.blue {
  color: rgb(50, 113, 207);
}

.bg-blue {
  background-color: rgb(50, 113, 207);
}

.violet {
  color: rgb(189, 50, 207);
}

.bg-violet {
  background-color: rgb(189, 50, 207);
}

.teal {
  color: rgb(45, 190, 166);
}

.bg-teal {
  background-color: rgb(45, 190, 166);
}

#menuToggle {
  display: block;
  position: relative;
  z-index: 1;
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle a {
  text-decoration: none;
  color: #232323;
  transition: color 0.3s ease;
}

#menuToggle input {
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  cursor: pointer;
  opacity: 0;
  z-index: 2;
  -webkit-touch-callout: none;
}

#menuToggle span {
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  background: rgb(144, 144, 144);
  border-radius: 3px;
  z-index: 1;
  transform-origin: 4px 0px;
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
}

#menuToggle span:first-child {
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2) {
  transform-origin: 0% 100%;
}

#menuToggle input:checked ~ span {
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: rgb(50, 207, 181);
}

#menuToggle input:checked ~ span:nth-last-child(3) {
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

#menuToggle input:checked ~ span:nth-last-child(2) {
  transform: rotate(-45deg) translate(0, -1px);
}

#menu {
  background-color: white;
  flex-direction: column;
  align-items: center;
  position: absolute;
  width: 100px;
  margin: -45px -50px 0 0px;
  padding: 50px;
  height: 90px;
  right: 0%;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  transform-origin: 0 0;
  transform: translate(0%, -100%);
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
  opacity: 0.9;
  border-radius: 36px;
}

#menu li {
  padding-top: 10px;
  padding-right: 10px;
}

#menu a {
  text-decoration: none;
  color: rgb(41, 41, 41);
  text-transform: uppercase;
  letter-spacing: 1px;
  border: rgb(255, 255, 255) 2px solid;
  border-radius: 6px;
  padding: 2px;
  font-size: 20px;
  font-weight: bold;
}

#menu a:hover {
  border: rgb(241, 241, 241) 2px solid;
  border-radius: 6px;
  padding: 2px;
  text-decoration: line-through;
  box-shadow: 1px 1px 12px rgb(230, 230, 230);
}

#menuToggle input:checked ~ ul {
  transform: none;
}

hr.rainbow {
  border: none;
  height: 5px;
  width: 155px;
  margin: auto;
  transform: rotate(-3deg);
  background-image: -webkit-linear-gradient(
    left,
    rgb(50, 113, 207),
    rgb(189, 50, 207),
    rgb(50, 207, 181)
  );
  background-image: -moz-linear-gradient(
    left,
    rgb(50, 113, 207),
    rgb(189, 50, 207),
    rgb(50, 207, 181)
  );
  background-image: -ms-linear-gradient(
    left,
    rgb(50, 113, 207),
    rgb(189, 50, 207),
    rgb(50, 207, 181)
  );
  background-image: -o-linear-gradient(
    left,
    rgb(50, 113, 207),
    rgb(189, 50, 207),
    rgb(50, 207, 181)
  );
}

.fade {
  animation: fadeIn;
  animation-duration: 1.3s;
}

.rubberBand {
  animation: bounceIn;
  animation-duration: 2.5s;
}

.delay {
  animation: fadeIn;
  animation-duration: 1.7s;
  animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

.hidden {
  opacity: 0;
}

.topScrollButton {
  position: fixed;
  z-index: 50;
  bottom: 0;
  right: 0;
  padding: 6px;
}

.topScrollButton img {
  width: 55px;
}

@media all and (max-width: 1290px) {
  .background-box,
  .background-box-second,
  .background-box-third {
    display: none;
  }
  .first-product-img img,
  .second-product-img img {
    width: 100%;
  }

  .third-product-img img {
    width: 75%;
  }

  .code-icons {
    justify-content: space-evenly;
  }

  .code-icons > img {
    margin-right: 0;
  }
}

@media all and (max-width: 1000px) {
  .first-product {
    margin-right: 0;
    padding: 20px;
  }
  .second-product {
    margin-left: 0;
    padding: 20px;
  }
  .about-section {
    width: 96%;
  }
  .about-section-text {
    flex-direction: column;
    align-items: center;
  }

  .about-section-text > div:nth-of-type(2) > p {
    margin-top: 0;
    padding-top: 0;
  }
}

@media all and (max-width: 875px) {
  .first-product,
  .second-product,
  .third-product {
    flex-direction: column;
    margin-bottom: 30px;
  }

  .second-product {
    margin-bottom: 100px;
  }

  .third-product {
    margin: auto;
    margin-bottom: 40px;
    z-index: 50;
  }

  .second-product-info,
  .first-product-info {
    margin-right: 0;
    margin-left: 0px;
    z-index: 50;
  }

  .contact-section-info {
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
  }

  .contact-section-info > div {
    margin: auto;
    text-align: center;
    margin-bottom: 40px;
    width: 100%;
  }

  .code-icons {
    background-color: white;
  }
}
/* ... */

